--- a/Remotion_Visualization/package.json
+++ b/Remotion_Visualization/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Remotion-software",
   "version": "1.0.0",
-  "description": "Remotoin server",
+  "description": "Remotion server",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
